--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ before_install:
 language: ruby
 rvm:
   - 2.3.0
-  - 2.2.0
-  - 2.1.3
+  #- 2.2.0
+  #- 2.1.3
   - 2.1.0
   - 2.0.0
-  - 1.9.3
+  #- 1.9.3
   - jruby-19mode
   - ruby-head
-  - jruby-head
+  #- jruby-head
