Clean up gemspec errors

--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Setup dependancies
       run: bundle install
     - name: Run unit tests
-      run: rspec
+      run: bundle exec rake
